--- a/ankiweb.html
+++ b/ankiweb.html
@@ -1,20 +1,10 @@
-This add-on used to be named "editor: apply font color, background color, custom class, custom style". Multiple people complained that it's too long. So on 2020-09-05 I changed the name.
-<b>This description only refers to the add-on for the Anki versions 2.1.24 (which was released on 2020-04-28) or later</b>.
+<b>This description only refers to the add-on for the Anki versions 2.1.55 (which was released in the summer of 2022) or later. Older versions of this add-on for older anki versions had more limitations/quirks because in older Anki versions the editor was more limited. Older versions of this add-on are no longer supported.</b>
 
-<b>If you find a bug let me know  <a href="https://forums.ankiweb.net/t/editor-apply-font-color-background-color-custom-class-custom-style-official-thread/550" rel="nofollow">in the official anki support forum</a>, on <a href="https://github.com/ijgnd/anki__editor__apply__font_color__background_color__custom_class__custom_style/issues" rel="nofollow">github</a>.</b>
+<b>If you find a bug let me know  <a href="https://forums.ankiweb.net/t/editor-apply-font-color-background-color-custom-class-custom-style-official-thread/550" rel="nofollow">in the official anki support forum</a>.</b>
 
+<b>If you use an iphone/ipad, see the section "updating the styling on AnkiMobile" below.</b>
 
 This add-on offers more styling options for the Anki editor: You can quickly set different font colors, background colors, font sizes or apply custom classes or styles. You can use shortcuts, buttons from the top of the editor or the context menu. 
-
-<b>Before you use this add-on make sure to read sections "Setup/Updating Templates" and "Quirks" and "updating the styling on Mobile" below</b>.
-
-<b>This add-on has some limitations for technical reasons: You either know some background about the anki editor and how to work around these or you will run into some problems like disappearing markup. If reading the sections mentioned above for two minutes is too much or if you can't live with these limitations don't use this add-on. Then just stop reading here.</b>
-
-Unfortunately this add-on currently also has some unnecessary limitation: 
-- Sometimes the applied formatting is not limited to the selection but slightly more or less is formatted.
-- This add-on does not work with the add-on <a href="https://ankiweb.net/shared/info/3491767031" rel="nofollow">Multi-column note editor</a> from 2020-05-23 in Anki version 2.1.28+. The problem can be solved in the multi-column note editor add-on.
-
-Use this add-on at your own risk.
 
 If you want to use a custom style but don't know css there are online sites that make creating styles easier. A google search lead to sites like <a href="https://html-css-js.com/css/generator/font/" rel="nofollow">this one</a> or <a href="https://webdesign-assistant.com/font-editor/css-font-generator.php" rel="nofollow">this one</a>.
 
@@ -25,10 +15,9 @@ This add-on offers the following options:
 1. directly changing the <b>font color by changing the html color attribute</b>. This is also built into Anki but switching between different colors is time consuming. You can set different font colors with the "Quick Colour Changing" add-on. This add-on additionally gives you the option to have multiple dedicated buttons or menu entries for font colors you often use. But my add-on  might be easier to use.
 2. you can set the <b>background color directly using the html background-color attribute</b>. The option to change the background color is also available in the add-on "Mini Format Pack". But switching between different colors is time consuming.
 3. you can <b>style text with the html style attribute</b>.
-4. you can set <b>css</b> for custom <b>classes</b> and apply these classes to the text selected using the inline "<b>span</b>" tag.
-5. you can set <b>css</b> for custom <b>classes</b> and apply these classes to the text selected using the "<b>div</b>" tag which is a block element which means you'll have a line-break before and after it. Some styling only makes sense when it's applied to a div.
-6. There's are easy to use dialogs/options to change the font color, the background color, and the font size by using css and html classes. This has some advantages and some drawabacks: html classes are roughly similar to "styles" that you can apply in Word or LibreOffice. When you use html classes you can later change the color for all the fonts you've highlighted at the same time and you can also set different colors for night mode.
-7. You can wrap the text selected with custom text snippets, see below.
+4. you can set <b>css</b> for custom <b>classes</b> and apply these classes to the text selected using the inline "<b>span</b>" tag or using the "<b>div</b>" tag which is a block element which means you'll have a line-break before and after it. Some styling only makes sense when it's applied to a div.
+5. There's are easy to use dialogs/options to change the font color, the background color, and the font size by using css and html classes. This has some advantages and some drawabacks: html classes are roughly similar to "styles" that you can apply in Word or LibreOffice. When you use html classes you can later change the color for all the fonts you've highlighted at the same time and you can also set different colors for night mode.
+6. You can wrap the text selected with custom text snippets, see below.
 
 <b># Text Wrapping</b>
 You can wrap selected text with fixed text snippets, e.g. you can set up a shortcut with "before" set to "Art ", and "after" set to " TFEU".
@@ -40,30 +29,15 @@ the text wrapping function is useful for <a href="https://ankiweb.net/shared/inf
 - Having "before" set to "{{c<i>%t</i>::", and "after" to "}}", makes a text wrapper that mimics the  built-in Ctrl-Alt-Shift-C cloze shortcut (think of <i>%t</i> as top).
 This is useful if you want to set the cloze shortcut to a custom key, or any add-on that mimics the built-in clozes in some way, see e.g. <a href="https://www.reddit.com/r/Anki/comments/72bov4/what_are_my_options_to_work_around_the_cloze_card/" rel="nofollow">here</a>. If you want a naked percentage sign, use  "%%". 
 
-<b># Quirks</b>
-Background: The Anki editor you see in the Add window and at the bottom of the browser is not meant to be a fully featured word processing software like Word or LibreOffice. Anki is meant to be used with short flashcards that don't require a lot of styling. The Anki manual repeatedly suggests to follow a "minimum information principle" when creating notes/cards. And there's only so much an add-on can do ...
-
-All functions mentioned in section above apart from "1/html color attribute" have quirks/drawbacks:
-
-- In all versions of Anki that I've used so far (the most recent when the add-on was released was 2.1.26) remove the background color (option 2) and styling (option 3) when you copy and paste the text into a different field in Anki. This is not a limitation of this add-on but also applies to background color you set with the add-on "Mini Format Pack".
-- The options that use classes (options 4, 5) cannot be undone with Ctrl/Cmd+Z and the regular Ctrl/Cmd+R doesn't remove the classes. Instead this add-on offers a custom shortcut for removing all formatting from selected text. Note: If you insert unformatted text into a html paragraph that already has some formatting the inserted text will also show this formatting. So the "remove all formatting" options only works as expected if you have unformatted text before your selection.
-
-I use classes because I don't mind using a custom clear shortcut.
-
-Another problem: In some cases an underlying component of Anki (the js command "inserthtml" in chromium) changes from inline to css styling and vice versa. As long as you don't change your css or rely on different styling for night mode you should't notice this ...
-
 <b># Setup</b>
-Each note type <i>MUST</i> have the string <code>@import url("_editor_button_styles.css");</code> at the top(!) of the "Styling" section in the "Card Types for ..." window. I've had many "bug" reports where people didn't do this. So this add-on offers to automatically adjust all notes types. This function has been in the add-on for about 10 months and so far I haven't heard a complaint. But if for some reason it failed you would have a major problem. You would have to manually fix the styling of maybe all note types or restore from a backup. So you must have backups before you use this add-on. When it comes to backups a common mistake is that users never check if they can actually restore their backups. A lot of people have learned that their backup didn't work only when they needed it ... In general having backups and knowing how to restore them is something everyone should know. This add-on might be the only one you use that has such a scary warning. I include the warning for various reasons here:
-- I have answered many support questions about Anki  in the Anki subreddit. Some people lost months or years of work because they didn't have proper backups (and they didn't use mobile or ... ).
-- A future version of Anki might change so that the code that currently works has unintended effects and maybe at that point I no longer use Anki or this add-on so that the add-on is not adjusted to this latest version.
-- Even though so far I haven't heard a complaint after thousands of downloads but maybe there's a bug that only affects only 1 in 10000? Or maybe my most recent update introduced a bug?
-
+Each note type <i>MUST</i> have the string <code>@import url("_editor_button_styles.css");</code> at the top(!) of the "Styling" section in the "Card Types for ..." window. I've had many "bug" reports where people didn't do this so this add-on offers to automatically adjust all notes types.
 
 <b># updating the styling on AnkiMobile</b>
 Changes to your config are only applied in AnkiMobile on my iphone after I force close and reopen Ankimobile. With "force close" I mean: double click the home button, then swipe up on the app's preview.
 
 <b># bugs, errors, feedback</b>
-Please do not use reviews for bug reports or support requests. I don't get notified of your reviews, and properly troubleshooting an issue through them is nearly impossible (formatting is limited and I can't reply multiple times). If you find a bug let me know <a href="https://forums.ankiweb.net/t/editor-apply-font-color-background-color-custom-class-custom-style-official-thread/550" rel="nofollow">in the official anki support forum</a>, on <a href="https://github.com/ijgnd/anki__editor__apply__font_color__background_color__custom_class__custom_style/issues" rel="nofollow">github</a>.
+Please do not use reviews for bug reports or support requests. I don't get notified of your reviews, and properly troubleshooting an issue through them is nearly impossible (formatting is limited and I can't reply multiple times). If you find a bug let me know <a href="https://forums.ankiweb.net/t/editor-apply-font-color-background-color-custom-class-custom-style-official-thread/550" rel="nofollow">in the official anki support forum</a>.
+
 <img src="https://raw.githubusercontent.com/ijgnd/anki__editor__apply__font_color__background_color__custom_class__custom_style/master/screenshots/screenshot_v3_context.png"> 
 <img src="https://raw.githubusercontent.com/ijgnd/anki__editor__apply__font_color__background_color__custom_class__custom_style/master/screenshots/screenshot_v3_config.png">
 
@@ -72,36 +46,21 @@ If you just want to sometimes change the text color or background color this add
 - The option to change the background color is available in the <a href="https://ankiweb.net/shared/info/295889520" rel="nofollow">Mini Format Pack</a>. But switching between different colors is time consuming.
 - Anki has a function to change the font color. But switching between different colors is time consuming.
 - There's the add-on <a href="https://ankiweb.net/shared/info/2491935955" rel="nofollow">Quick Colour Changing</a> that allows to set shortcuts for different font colors.
-- the <a href="https://ankiweb.net/shared/info/805891399" rel="nofollow">extended (table) editor</a> allows to edit <i>one</i> field in a powerful WYYIWYG editor (TinyMCE)
-- <a href="https://ankiweb.net/shared/info/396502676" rel="nofollow">Wrapper meta-addon</a> for wrapping with nested divs
+- the <a href="https://ankiweb.net/shared/info/805891399" rel="nofollow">extended editor for field</a> allows to edit <i>one</i> field in a powerful WYYIWYG editor (TinyMCE)
+- <a href="https://ankiweb.net/shared/info/396502676" rel="nofollow">Wrapper meta-addon</a> for wrapping text, etc.
 
-
-<b># authors</b>
-- <a href="https://ankiweb.net/shared/byauthor/1434066995" rel="nofollow">ijgnd</a>: original add-on creator, all versions until 2020-09. 
-- <b><a href="https://ankiweb.net/shared/byauthor/1686259334" rel="nofollow">Henrik Giesel/hgiesel</a></b> (many contributions in 2020 including enhancements like text wrapping and multiple important bug fixes).
-- for a detailed copyright notice see <a href="http://__init__.py" rel="nofollow">__init__.py</a> from the add-on.
+<b># Authors</b>
+- <a href="https://ankiweb.net/shared/byauthor/1686259334" rel="nofollow">Henrik Giesel/hgiesel</a>: Many contributions and fundamental improvements since 2020, and maintainer since 2020-09
+- <a href="https://ankiweb.net/shared/byauthor/1434066995" rel="nofollow">ijgnd</a>: Original add-on creator, all versions until 2020-09. 
 
 <b># Versions</b>
-- 2020-09-17 fix inline styling, fix import json
-- 2020-09-16 bug fixes for the styling config window
-- 2020-09-05 reworked config window (by <b>hgiesel</b>)
-- 2020-08-14 many under the hood improvements by <b><a href="https://ankiweb.net/shared/byauthor/1686259334" rel="nofollow">hgiesel</a></b>
-- 2020-08-09 fix so that it works in the EditCurrent dialog when using the add-on <a href="https://ankiweb.net/shared/info/1686259334" rel="nofollow">Persistent Editor</a> (version from 2020-08-03), multiple improvements by <b>hgiesel</b>: on shortcut conflicts make shortcuts from my add-on work, more custom text wrapping options, ...
-- 2020-07-22 write utf8 file on windows, tweak template updating
-- 2020-07-12 first workaround for problem that sometimes rangy markups more than the selection: I use rangy only if the selection contains html tags, see  <a href="https://github.com/ijgnd/anki__editor__apply__font_color__background_color__custom_class__custom_style/issues/18" rel="nofollow">github issue 18</a>.
-- 2020-06-26 Text Wrapper extended with counter (by <b>hgiesel</b>)
-- 2020-06-23 more clear labels on settings for MacOS (by <b>hgiesel</b>)
-- 2020-06-14 fix for <a href="weird MacOS bug" rel="nofollow">weird MacOS bug(#12)</a> by <b>hgiesel</b>. 
-- 2020-06-13 small fix: keyerror in <a href="http://adjust_config.py" rel="nofollow">adjust_config.py</a>
-- 2020-06-10 small fix: github issue #11
-- 2020-06-08 <b>v0.4</b> 2.1.24+ only: for classes there's a night mode option, quick config dialogs for classes that only change the font color, the background color, or the font size. Classes and the html-style tag are more reliably applied. Added text wrapper option. Added the wrap with div option. Major changes under the hood. Now it works with the add-on <a href="https://ankiweb.net/shared/info/1215991469" rel="nofollow">Customize Editor Stylesheet</a>
-- 2020-01-22 update templates on mobile, misc
-- 2019-11-21       bgcolor fix
-- 2019-08-29 v0.31 extended info boxes for the user (2.1), replaced the add-on for 2.0 with a message
-- 2019-08-06 <b>v0.3</b>   new configuration dialog
-- 2019-07-16 v0.2.3 added manifest.json
-- 2019-06-15 v0.2.2 bugfix
-- 2019-02-25 v0.2.1 bugfix
-- 2019-02-19 <b>v0.2</b> added context menu, styles, classes
-- 2019-01-29 v0.1.1
-- 2019-01-16 v0.1 
+- 2022 update for Anki 2.1.55+
+- 2021-03-03 update for 2.1.41+
+...
+- 2020-06-26 Text Wrapper extended with counter
+...
+- 2019-08-06 v0.3: new configuration dialog
+...
+- 2019-02-19 v0.2: added context menu, styles, classes
+...
+- 2019-01-16 initial release
