--- a/ankiweb.html
+++ b/ankiweb.html
@@ -1,6 +1,8 @@
-<b>This description only refers to the add-on for the Anki versions 2.1.55 (which was released in the summer of 2022) or later. Older versions of this add-on for older anki versions had more limitations/quirks because in older Anki versions the editor was more limited. Older versions of this add-on are no longer supported.</b>
+<b>On Anki 2.1.50+ this add-on only supports Anki versions built with pyqt6!</b>
 
-<b>If you find a bug let me know  <a href="https://forums.ankiweb.net/t/editor-apply-font-color-background-color-custom-class-custom-style-official-thread/550" rel="nofollow">in the official anki support forum</a>.</b>
+<b>This description only refers to the add-on for the Anki versions 2.1.60 (which was released in 2023-02) or later. Older versions of this add-on for older anki versions had more limitations/quirks because in older Anki versions the editor was more limited. Older versions of this add-on are no longer supported.</b>
+
+<b>If you find a bug let me know <a href="https://forums.ankiweb.net/t/editor-apply-font-color-background-color-custom-class-custom-style-official-thread/550" rel="nofollow">in the official anki support forum</a>.</b>
 
 <b>If you use an iphone/ipad, see the section "updating the styling on AnkiMobile" below.</b>
 
@@ -33,7 +35,7 @@ This is useful if you want to set the cloze shortcut to a custom key, or any add
 Each note type <i>MUST</i> have the string <code>@import url("_editor_button_styles.css");</code> at the top(!) of the "Styling" section in the "Card Types for ..." window. I've had many "bug" reports where people didn't do this so this add-on offers to automatically adjust all notes types.
 
 <b># updating the styling on AnkiMobile</b>
-Changes to your config are only applied in AnkiMobile on my iphone after I force close and reopen Ankimobile. With "force close" I mean: double click the home button, then swipe up on the app's preview.
+(In 2021) changes to your config are only applied in AnkiMobile on my iphone after I force close and reopen Ankimobile. With "force close" I mean: double click the home button, then swipe up on the app's preview.
 
 <b># bugs, errors, feedback</b>
 Please do not use reviews for bug reports or support requests. I don't get notified of your reviews, and properly troubleshooting an issue through them is nearly impossible (formatting is limited and I can't reply multiple times). If you find a bug let me know <a href="https://forums.ankiweb.net/t/editor-apply-font-color-background-color-custom-class-custom-style-official-thread/550" rel="nofollow">in the official anki support forum</a>.
@@ -48,13 +50,14 @@ If you just want to sometimes change the text color or background color this add
 - There's the add-on <a href="https://ankiweb.net/shared/info/2491935955" rel="nofollow">Quick Colour Changing</a> that allows to set shortcuts for different font colors.
 - the <a href="https://ankiweb.net/shared/info/805891399" rel="nofollow">extended editor for field</a> allows to edit <i>one</i> field in a powerful WYYIWYG editor (TinyMCE)
 - <a href="https://ankiweb.net/shared/info/396502676" rel="nofollow">Wrapper meta-addon</a> for wrapping text, etc.
+- ...
 
 <b># Authors</b>
 - <a href="https://ankiweb.net/shared/byauthor/1686259334" rel="nofollow">Henrik Giesel/hgiesel</a>: Many contributions and fundamental improvements since 2020, and maintainer since 2020-09
 - <a href="https://ankiweb.net/shared/byauthor/1434066995" rel="nofollow">ijgnd</a>: Original add-on creator, all versions until 2020-09. 
 
 <b># Versions</b>
-- 2022 update for Anki 2.1.55+
+- 2023-02 update for Anki 2.1.55+
 - 2021-03-03 update for 2.1.41+
 ...
 - 2020-06-26 Text Wrapper extended with counter
