--- a/ankiweb.html
+++ b/ankiweb.html
@@ -1,6 +1,12 @@
-<b>On Anki 2.1.50+ this add-on only supports Anki versions built with pyqt6!</b>
+<b>On Anki 2.1.55+ this add-on only supports Anki versions built with pyqt6!</b>
+
+<b>On Anki 2.1.55+ css for classes applied by this add-on is not shown in the editor. The styling is only visible in the reviewer. If you also want to have them in the editor you also need the add-on <a href="https://ankiweb.net/shared/info/181103283" rel="nofollow">CSS Injector</a>. Copy the content of the file "_editor_button_styles.css" from your media folder into the file "field.css" in the css injector add-on or use [this modification](https://github.com/ijgnd/anki__editor__apply__font_color__background_color__custom_class__custom_style/issues/60#issuecomment-1445023554).</b>
+
+<b>This add-on does not support Anki 2.1.50-2.1.54</b>
 
 <b>This description only refers to the add-on for the Anki versions 2.1.60 (which was released in 2023-02) or later. Older versions of this add-on for older anki versions had more limitations/quirks because in older Anki versions the editor was more limited. Older versions of this add-on are no longer supported.</b>
+
+<b>On Anki 2.1.50+ you need to </b>
 
 <b>If you find a bug let me know <a href="https://forums.ankiweb.net/t/editor-apply-font-color-background-color-custom-class-custom-style-official-thread/550" rel="nofollow">in the official anki support forum</a>.</b>
 
